2009-05-19  Andrew John Hughes  <ahughes@redhat.com>

	* HACKING: Updated with new ecj patches.
	* Makefile.am: Move JIBX_DEPS_DIR definition
	to top level, remove jibx.stamp from ecj build.
	* acinclude.m4:
	(IT_JAVAH): Renamed from IT_CP39408_JAVAH.
	Add test for PR40188.
	* configure.ac:
	Make full bootstrap the default again.  Rename
	IT_CP39408_JAVAH to IT_JAVAH.
	* patches/ecj/icedtea-dyn.patch:
	New patch to disable building of java.dyn
	when using ecj (needs javac 1.7).
	* patches/ecj/icedtea-pr40188.patch:
	New patch for when bug PR40188 is present
	in javah (incorrect naming of constants).
	
2009-05-14  Andrew John Hughes  <ahughes@redhat.com>

	* configure.ac:
	Turn --with-icedtea on by default.
	Only this build works at present for b58.
	
2009-05-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add support for DISABLE_NIMBUS, correct
	use of bootclasspath/sourcepath in extra-files.stamp
	* acinclude.m4:
	(AC_CHECK_ENABLE_NIMBUS): New macro.
	* configure.ac:
	Enable --disable-nimbus, only search for JIBX
	and dependencies when enabled.

2009-05-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(OPENJDK_VERSION): Added back.
	(ALT_JIBX_LIBS_PATH): Point to our jibx
	directory.
	(extra.stamp): Use OpenJDK source files
	rather than (possibly non-existant) rt.jar.
	(jibx.stamp): Add symlinks to JIBX JAR files.
	* acinclude.m4:
	(FIND_BCEL_JAR): New macro.
	(FIND_XPP3_JAR): Likewise.
	(FIND_JIBX_DIR): Likewise.
	* configure.ac:
	Include new macros for finding Nimbus dependencies.

2009-05-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Update list of generated files.
	* generated/sun/awt/X11/XAWTIcon32_java_icon16_png.java,
	* generated/sun/awt/X11/XAWTIcon32_java_icon24_png.java,
	* generated/sun/awt/X11/XAWTIcon32_java_icon32_png.java,
	* generated/sun/awt/X11/XAWTIcon32_java_icon48_png.java:
	Update.
	* generated/sun/awt/X11/XAWTIcon32_security_icon_bw16_png.java,